2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * client/gdaemonfileinputstream.c:
        * client/gdaemonfileoutputstream.c:
        * common/gsysutils.c:
        * common/gvfsdaemonprotocol.c:
        * daemon/gvfsbackendburn.c:
        * daemon/gvfsbackendcdda.c:
        * daemon/gvfsbackenddav.c:
        * daemon/gvfsbackendsftp.c:
        * daemon/gvfsbackendsmb.c:
        * daemon/gvfsbackendsmbbrowse.c:
        * daemon/gvfsbackendtest.c:
        * daemon/gvfsdaemonutils.c:
        * daemon/gvfsjob.c:
        * daemon/mount.c:
        * daemon/pty_open.c:
	Save errno befor making other calls.
	Be safe when calling g_set_error()
	Patch from Christian Persch (#514822)

2008-02-11  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * daemon/gvfsbackendcomputer.c:
        * hal/ghalvolume.c:
        * programs/gvfs-mount.c:
	Update for the new mount flag argument.
	
        * hal/ghaldrive.c:
        * programs/gvfs-open.c:
	Fix warnings

2008-02-10  Luca Ferretti  <elle.uca@libero.it>

	* daemon/gvfsbackendburn.c: (g_vfs_backend_burn_init),
	(file_info_from_node):
	Rename burn:// with old "CD/DVD Creator" name.

	* daemon/gvfsbackendtrash.c: (g_vfs_backend_trash_init),
	(do_query_info):
	Rename trash:// with old "Trash" name.

2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolume.c:
        Implement g_volume_should_automount.

2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendcomputer.c:
	Add "filesystem" to computer:
	
        * hal/ghalmount.c:
	Remove spew

2008-02-08  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalmount.c:
	Try to find cdrom icons from autorun.inf.
	Based on patch from John Millikin

2008-02-08  Alexander Larsson  <alexl@redhat.com>

	* common/gvfsdaemonprotocol.c:
	Fix up indentation
	Don't unref file from g_file_icon_get_file().

2008-02-08  Alexander Larsson  <alexl@redhat.com>
